# ai-tool-actions-api

./: .gitignore  Dockerfile  pyproject.toml  swagger.json
.github/workflows/: build-and-release.yml
capabilities_solutions_api/: __init__.py
capabilities_solutions_api/adapters/: capabilities_client.py
capabilities_solutions_api/adapters/controllers/: routes.py  schemas.py
capabilities_solutions_api/adapters/repositories/: postgres.py
capabilities_solutions_api/app/ports/: repository.py
capabilities_solutions_api/app/use_cases/: catalog_service.py
capabilities_solutions_api/domain/: errors.py  models.py  resolver.py  sha.py
capabilities_solutions_api/main/: app.py  db.py  settings.py  telemetry.py
database/: schema.sql
database/migrations/: 001_capability_cti.sql
openapi/: ai-tool-actions-api.html  ai-tool-actions-api.openapi.json
scripts/: migrate_yaml_to_api.py
tests/integration/: conftest.py  test_app.py  test_repository_constraints.py
tests/unit/: test_catalog_service.py  test_resolver.py  test_sha.py  test_telemetry.py
